--- a/kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-proxy.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-proxy.yml
@@ -4,13 +4,11 @@ metadata:
   name: oathkeeper-proxy
   labels:
     app.kubernetes.io/instance: oathkeeper
+    app.kubernetes.io/component: oathkeeper-proxy
 spec:
   ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: http-proxy
-  selector:
-    app.kubernetes.io/instance: oathkeeper
-    app.kubernetes.io/name: oathkeeper
   type: ClusterIP
