--- a/kubernetes/raspberry-pi/monitoring/alertmanager/alertmanagerconfig.yml
+++ b/kubernetes/raspberry-pi/monitoring/alertmanager/alertmanagerconfig.yml
@@ -53,6 +53,14 @@ spec:
     receiver: discord
     repeatInterval: 12h
     routes:
+      - groupWait: 10m
+        matchers:
+          - matchType: '=~'
+            name: severity
+            value: critical|warning|error
+          - name: kind
+            value: GitRepository
+        receiver: slack
       - groupInterval: 10m
         groupWait: 5m
         matchers:
