--- a/kubernetes/raspberry-pi/auth/oathkeeper/servicemonitor-oathkeeper.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/servicemonitor-oathkeeper.yml
@@ -1,5 +1,5 @@
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
+apiVersion: operator.victoriametrics.com/v1beta1
+kind: VMServiceScrape
 metadata:
   name: oathkeeper
   labels:
