--- a/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
@@ -1,5 +1,5 @@
-apiVersion: monitoring.coreos.com/v1
-kind: PrometheusRule
+apiVersion: operator.victoriametrics.com/v1beta1
+kind: VMRule
 metadata:
   name: check-public-ip
 spec:
