--- a/kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-maester-metrics.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-maester-metrics.yml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/component: oathkeeper-maester-metrics
 spec:
   ports:
-  - name: http
+  - name: metrics
     port: 80
     protocol: TCP
     targetPort: metrics
