chore(jaeger): ship traces to postgresql

--- a/kubernetes/raspberry-pi/monitoring/jaeger/configs.env
+++ b/kubernetes/raspberry-pi/monitoring/jaeger/configs.env
@@ -1,3 +1,4 @@
 COLLECTOR_ZIPKIN_HTTP_PORT=9411
-SPAN_STORAGE_TYPE=memory
+GRPC_STORAGE_SERVER=localhost:12345
 MEMORY_MAX_TRACES=10000
+SPAN_STORAGE_TYPE=grpc-plugin
