--- a/kubernetes/raspberry-pi/monitoring/jaeger/deployment.yml
+++ b/kubernetes/raspberry-pi/monitoring/jaeger/deployment.yml
@@ -47,6 +47,7 @@ spec:
             requests:
               cpu: 250m
               memory: 256Mi
+      initContainers:
         - name: jaeger-postgresql
           image: ghcr.io/robbert229/jaeger-postgresql/jaeger-postgresql
           ports:
@@ -66,3 +67,4 @@ spec:
             requests:
               cpu: 10m
               memory: 16Mi
+          restartPolicy: Always
