--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
@@ -4,6 +4,7 @@ configMapGenerator:
       - ./app/main.py
 
 resources:
+  - namespace.yml
   - service.yml
   - deployment.yml
   - servicemonitor.yml
