--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomize.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomize.yml
@@ -11,5 +11,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  targetNamespace: app
+  targetNamespace: default
   wait: true
