fix: reference the correct secret

--- a/kubernetes/raspberry-pi/applications/atuin/externalsecret.yml
+++ b/kubernetes/raspberry-pi/applications/atuin/externalsecret.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   data:
     - remoteRef:
-        key: /atuin/db/uri
+        key: /atuin/db-uri
       secretKey: ATUIN_DB_URI
   refreshInterval: 24h
   secretStoreRef:
