chore: add node-rules, starting with disk space

--- a/kubernetes/raspberry-pi/monitoring/kustomization.yml
+++ b/kubernetes/raspberry-pi/monitoring/kustomization.yml
@@ -3,3 +3,4 @@ resources:
   - ./notifications/kustomize.yml
   - ./jaeger/kustomize.yml
   - ./vmagent/kustomize.yml
+  - ./promrules/kustomize.yml
