--- a/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
@@ -5,11 +5,11 @@ metadata:
 spec:
   groups:
     - name: check-public-ip
-      interval: 1m
+      interval: 30s
       rules:
         - alert: IpChanged
-          expr: count_over_time(public_ip[10m]) > 0
-          for: 1m
+          expr: count by (ip_address) (public_ip) > 1
+          for: 2m
           labels:
             severity: warning
           annotations:
