--- a/kubernetes/raspberry-pi/monitoring/vmalert/vmalert.yml
+++ b/kubernetes/raspberry-pi/monitoring/vmalert/vmalert.yml
@@ -6,10 +6,10 @@ spec:
   datasource:
     url: http://vmsingle-vmsingle.monitoring
   selectAllByDefault: true
-  # serviceSpec:
-  #   spec:
-  #     type: ClusterIP
-  #     ports:
-  #       - name: http
-  #         port: 8880
-  #         targetPort: 8880
+  serviceSpec:
+    spec:
+      type: ClusterIP
+      ports:
+        - name: http
+          port: 80
+          targetPort: http
