--- a/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
@@ -105,3 +105,6 @@ spec:
       enabled: false
     prometheus:
       enabled: false
+    rules:
+      kubeControllerManager: false
+      kubernetesSystem: false
