fix: reference the rules from the correct hierarchy

--- a/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
@@ -105,6 +105,7 @@ spec:
       enabled: false
     prometheus:
       enabled: false
-    rules:
-      kubeControllerManager: false
-      kubernetesSystem: false
+    defaultRules:
+      rules:
+        kubeControllerManager: false
+        kubernetesSystem: false
