chore(vm): delete converted objects when source are deleted

--- a/kubernetes/raspberry-pi/helm-releases/victoria-metrics-operator/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/victoria-metrics-operator/release.yml
@@ -27,3 +27,6 @@ spec:
     crds: CreateReplace
     remediation:
       remediateLastFailure: true
+  values:
+    operator:
+      enable_converter_ownership: true
