--- a/kubernetes/raspberry-pi/auth/oathkeeper/kustomization.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/kustomization.yml
@@ -104,7 +104,8 @@ replacements:
           create: true
 
 resources:
-  - https://github.com/ory/oathkeeper-maester//config/crd?timeout=30s&ref=v0.1.10
+  # - https://github.com/ory/oathkeeper-maester//config/crd?timeout=30s&ref=v0.1.10
+  - crds.yml
   - externalsecret.yml
   - clusterrole.yml
   - clusterrolebinding.yml
