--- a/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
@@ -8,7 +8,7 @@ spec:
       interval: 30s
       rules:
         - alert: IpChanged
-          expr: count by (public_ip) (count_over_time(public_ip[10m])) > 1
+          expr: count by (ip_address) (count_over_time(public_ip[10m])) > 1
           for: 0s
           labels:
             severity: warning
