fix(runner): make workdir container more debuggable

--- a/kubernetes/raspberry-pi/applications/gh-self-hosted-runner/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/gh-self-hosted-runner/deployment.yml
@@ -34,6 +34,8 @@ spec:
       initContainers:
         - args:
             - |
+              set -eux
+
               if [ "$(ls -A /data)" ]; then
                 echo "data directory is not empty"
               else
