fix(runner): copy everything recursively

--- a/kubernetes/raspberry-pi/applications/gh-self-hosted-runner/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/gh-self-hosted-runner/deployment.yml
@@ -39,7 +39,7 @@ spec:
               if [ "$(ls -A /data)" ]; then
                 echo "data directory is not empty"
               else
-                cp -r /home/runner/* /data
+                cp -r /home/runner /data
               fi
           command:
             - sh
