fix(runner): use rsync for data copying

--- a/kubernetes/raspberry-pi/applications/gh-self-hosted-runner/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/gh-self-hosted-runner/deployment.yml
@@ -39,7 +39,9 @@ spec:
               if [ "$(ls -A /data)" ]; then
                 echo "data directory is not empty"
               else
-                cp -r /home/runner /data
+                sudo apt install -y rsync
+
+                rsync -azuvb /home/runner/ /data
               fi
           command:
             - sh
