chore: deploy in-house deployed echo-server :)

--- a/applications/echo-server/base/service.yml
+++ b/applications/echo-server/base/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: echo-server
 spec:
   ports:
-    - name: http
+    - protocol: TCP
       port: 80
       targetPort: http
   type: ClusterIP
