--- a/applications/echo-server/overlays/test/service.yml
+++ b/applications/echo-server/overlays/test/service.yml
@@ -2,3 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echo-server-${PR_NUMBER}
+spec:
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: http
+  type: ClusterIP
