--- a/kubernetes/raspberry-pi/gateway/certificate.yml
+++ b/kubernetes/raspberry-pi/gateway/certificate.yml
@@ -5,6 +5,7 @@ metadata:
 spec:
   dnsNames:
     - "*.developer-friendly.blog"
+    - "*.test.developer-friendly.blog"
   issuerRef:
     kind: ClusterIssuer
     name: cloudflare-issuer
