--- a/applications/echo-server/overlays/test/httproute.yml
+++ b/applications/echo-server/overlays/test/httproute.yml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: echo-server-${PR_NUMBER}
+  name: echo-server
 spec:
   hostnames:
     - ${PR_NUMBER}.test.developer-friendly.blog
