fix: modify vmsingle write URL

--- a/kubernetes/raspberry-pi/monitoring/vmagent/vmagent.yml
+++ b/kubernetes/raspberry-pi/monitoring/vmagent/vmagent.yml
@@ -17,4 +17,4 @@ spec:
           key: username
           name: vmagent
           optional: false
-    - url: http://vmsingle-vmsingle.monitoring
+    - url: http://vmsingle-vmsingle.monitoring/api/v1/write
