--- a/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/promrule.yml
@@ -9,6 +9,7 @@ spec:
       rules:
         - record: public_ip_total
           expr: count by (ip_address) (count_over_time(public_ip[10m]))
+          debug: true
         - alert: IpChanged
           expr: public_ip_total > 1
           for: 0s
