fix: remove the trailing uri

--- a/kubernetes/raspberry-pi/monitoring/vmalert/vmalert.yml
+++ b/kubernetes/raspberry-pi/monitoring/vmalert/vmalert.yml
@@ -8,7 +8,7 @@ spec:
   notifiers:
     - url: http://kube-prometheus-stack-alertmanager.monitoring:9093
   remoteWrite:
-    url: http://vmsingle-vmsingle.monitoring/api/v1/write
+    url: http://vmsingle-vmsingle.monitoring
   selectAllByDefault: true
   serviceSpec:
     spec:
