--- a/kubernetes/raspberry-pi/helm-releases/blackbox-exporter/blackbox-exporter-config.yml
+++ b/kubernetes/raspberry-pi/helm-releases/blackbox-exporter/blackbox-exporter-config.yml
@@ -49,3 +49,15 @@ modules:
     timeout: 5s
     icmp:
       ttl: 5
+  http_2xx_tls:
+    prober: http
+    timeout: 5s
+    http:
+      valid_http_versions: ["HTTP/1.1", "HTTP/2"]
+      valid_status_codes: [] # Defaults to 2xx
+      method: GET
+      no_follow_redirects: false
+      fail_if_ssl: true
+      fail_if_not_ssl: false
+      tls_config:
+        insecure_skip_verify: false
