--- a/kubernetes/raspberry-pi/applications/atuin/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/atuin/deployment.yml
@@ -29,8 +29,6 @@ spec:
             - |
               set -eu
 
-              ATUIN_DB_URI="postgresql://atuin_owner:spHYJQ40LItB@ep-misty-leaf-a168l8rz-pooler.ap-southeast-1.aws.neon.tech/atuin?sslmode=require"
-
               export POSTGRES_HOST=$(echo $ATUIN_DB_URI | awk -F/ '{print $3}' | awk -F@ '{print $2}')
               export POSTGRES_USER=$(echo $ATUIN_DB_URI | awk -F/ '{print $3}' | awk -F: '{print $1}')
               export POSTGRES_PASSWORD=$(echo $ATUIN_DB_URI | awk -F: '{print $3}' | awk -F@ '{print $1}')
@@ -51,7 +49,8 @@ spec:
           name: postgres-healthcheck
           securityContext:
             readOnlyRootFilesystem: true
-            runAsNonRoot: true
+            fsGroup: 1000
+            runAsUser: 70
       volumes:
         - name: atuin-claim
           emptyDir: {}
