feat: deploy keto

--- a/kubernetes/raspberry-pi/helm-releases/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kustomization.yml
@@ -19,3 +19,4 @@ resources:
   - ./blackbox-exporter/kustomize.yml
   - ./promtail/kustomize.yml
   - ./victoria-metrics-operator/kustomize.yml
+  - ./keto/kustomize.yml
