chore(keto): switch to manual kustomization deployment
Ory's helm charts are the worst charts I've ever dealt with

--- a/kubernetes/raspberry-pi/helm-releases/keto/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/keto/release.yml
@@ -52,6 +52,6 @@ spec:
               path: keto.yaml
       extraVolumeMounts:
         - name: keto-config
-          mountPath: /etc/config/keto.yaml
+          mountPath: /etc/config/
           subPath: keto.yaml
           readOnly: true
