chore: remove posts namespace

--- a/kubernetes/raspberry-pi/auth/keto/keto-server-config.yml
+++ b/kubernetes/raspberry-pi/auth/keto/keto-server-config.yml
@@ -6,9 +6,9 @@ log:
   level: info
 namespaces:
   - id: 0
-    name: posts
-  - id: 1
     name: roles
+  - id: 1
+    name: endpoints
 profiling: cpu
 serve:
   metrics:
