chore: specify keto read URL to oathkeeper

--- a/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
@@ -61,7 +61,7 @@ authorizers:
     enabled: true
   remote_json:
     config:
-      remote: https://developer-friendly.blog
+      remote: http://keto-read.auth
       payload: '{"subject":"{{ .Subject }}"}'
     enabled: true
   allow:
