feat: deploy oathkeeper httproute

--- a/kubernetes/raspberry-pi/auth/oathkeeper/kustomization.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/kustomization.yml
@@ -118,5 +118,6 @@ resources:
   - deployment-oathkeeper.yml
   - servicemonitor-oathkeeper.yml
   - servicemonitor-oathkeeper-maester.yml
+  - httproute.yml
 
 namespace: auth
