fix(oathkeeper): reference the check endpoint of keto

--- a/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
@@ -61,7 +61,7 @@ authorizers:
     enabled: true
   remote_json:
     config:
-      remote: http://keto-read.auth
+      remote: http://keto-read.auth/relation-tuples/check
       payload: '{"subject":"{{ .Subject }}"}'
     enabled: true
   allow:
