chore(atuin): provide the pg-healthcheck as a probe

--- a/kubernetes/raspberry-pi/applications/atuin/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/atuin/deployment.yml
@@ -24,33 +24,29 @@ spec:
             - mountPath: /config
               name: atuin-claim
         - command:
-            - sh
-            - -c
-            - |
-              set -eu
-
-              export POSTGRES_HOST=$(echo $ATUIN_DB_URI | awk -F/ '{print $3}' | awk -F@ '{print $2}')
-              export POSTGRES_USER=$(echo $ATUIN_DB_URI | awk -F/ '{print $3}' | awk -F: '{print $1}')
-              export POSTGRES_PASSWORD=$(echo $ATUIN_DB_URI | awk -F: '{print $3}' | awk -F@ '{print $1}')
-              export POSTGRES_DB=$(echo $ATUIN_DB_URI | awk -F/ '{print $4}' | awk -F? '{print $1}')
-
-              while true; do
-                if pg_isready -h $POSTGRES_HOST -U $POSTGRES_USER -d $POSTGRES_DB -p 5432; then
-                  sleep 30
-                else
-                  exit 1
-                fi
-              done
+            - sleep
+            - infinity
           envFrom:
             - secretRef:
                 name: atuin
           image: postgres:16-alpine
           imagePullPolicy: IfNotPresent
+          livenessProbe:
+            exec:
+              command:
+                - /scripts/pg-healthcheck.sh
           name: postgres-healthcheck
           securityContext:
             readOnlyRootFilesystem: true
             fsGroup: 1000
             runAsUser: 70
+          volumeMounts:
+            - mountPath: /scripts
+              name: atuin-files
       volumes:
         - name: atuin-claim
           emptyDir: {}
+        - name: atuin-files
+          configMap:
+            name: atuin-files
+            defaultMode: 0555
