--- a/kubernetes/raspberry-pi/applications/atuin/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/atuin/kustomization.yml
@@ -2,6 +2,9 @@ configMapGenerator:
   - name: atuin
     envs:
       - configs.env
+  - name: atuin-files
+    files:
+      - pg-healthcheck.sh
 
 resources:
   - externalsecret.yml
