chore: separate the stack to allow dependency between them

--- a/kubernetes/raspberry-pi/applications/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/kustomization.yml
@@ -2,4 +2,5 @@ resources:
   - ./check-public-ip/kustomize.yml
   - ./echo-server/kustomize.yml
   - ./atuin/kustomize.yml
+  - ./submit-hackernews-secret/kustomize.yml
   - ./submit-hackernews/kustomize.yml
