--- a/kubernetes/raspberry-pi/applications/submit-hackernews/kustomize.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/kustomize.yml
@@ -4,6 +4,9 @@ metadata:
   name: submit-hackernews
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: submit-hackernews-secret
+      namespace: flux-system
   force: false
   interval: 5m
   path: ./kubernetes/raspberry-pi/applications/submit-hackernews
