chore: simplify the hackernews stack

--- a/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
@@ -1,4 +1,10 @@
+configMapGenerator:
+  - name: submit-hackernews
+    envs:
+      - configs.env
+
 resources:
+  - externalsecret.yml
   - https://github.com/meysam81/submit-hackernews//kustomize/cronjob?timeout=30s&ref=main
 
 patches:
