--- a/kubernetes/raspberry-pi/applications/submit-hackernews/cronjob.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/cronjob.yml
@@ -3,4 +3,15 @@ kind: CronJob
 metadata:
   name: submit-hackernews
 spec:
-  schedule: "0 14 5 7 *" # July 5th at 1:30 PM every year
+  schedule: "0 14 5 7 *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+            - envFrom:
+                - configMapRef:
+                    name: submit-hackernews
+                - secretRef:
+                    name: submit-hackernews
+              name: submit-hackernews
