fix: upgrade submis HN image tag

--- a/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
@@ -7,5 +7,9 @@ resources:
   - externalsecret.yml
   - https://github.com/meysam81/submit-hackernews//kustomize/cronjob?timeout=30s&ref=main
 
+images:
+  - name: ghcr.io/meysam81/submit-hackernews
+    newTag: v1.1
+
 patches:
   - path: cronjob.yml
