--- a/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
@@ -2,6 +2,9 @@ configMapGenerator:
   - name: submit-hackernews
     envs:
       - configs.env
+  - name: submit-hackernews-main
+    files:
+      - main.sh
 
 resources:
   - externalsecret.yml
