fix: modify referenced configmap

--- a/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/kustomization.yml
@@ -2,7 +2,7 @@ configMapGenerator:
   - name: submit-hackernews
     envs:
       - configs.env
-  - name: submit-hackernews-main
+  - name: submit-hackernews-files
     files:
       - main.sh
 
