--- a/kubernetes/raspberry-pi/applications/submit-hackernews/cronjob.yml
+++ b/kubernetes/raspberry-pi/applications/submit-hackernews/cronjob.yml
@@ -4,7 +4,7 @@ metadata:
   name: submit-hackernews
 spec:
   schedule: "0 14 5 7 *"
-  timezone: UTC
+  timeZone: UTC
   jobTemplate:
     spec:
       template:
